# schemahq-cli

./: .gitignore  README.md  pyproject.toml  schema.sql  statements.sql
.github/workflows/: ci.yml  publish.yml
schemahq/: roles.py  schemahq.py
schemahq_cli/: cli.py  schemahq.py
tests/: test_cli.py  test_roles.py  test_schemahq_cli.py
