[tool.poetry]
name = "schemahq"
version = "0.1.13"
description = ""
authors = ["Nathan Cahill <nathan@nathancahill.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.3.0"
schemahq-migra = "^1.0.10"
sqlbag = "^0.1.1579049654"
requests = "^2.23.0"
colorful = "^0.5.4"
pgformatter = "^0.1.5"
sqlparse = "^0.3.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"

[tool.poetry.scripts]
schemahq = "schemahq.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
